<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="600dp"
    android:layout_width="match_parent"
    android:layout_margin="20dp"
    app:cardCornerRadius="30dp">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.kunal.android.gms.samples.vision.ocrreader.BookInfo">

            <ProgressBar
                android:id="@+id/progressBar"
                android:visibility="gone"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

                <ImageView
                    android:contentDescription="@string/book"
                    android:id="@+id/book_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_below="@+id/book_image"
                    android:id="@+id/name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layout_margin">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:layout_height="wrap_content"
                        android:text="@string/book_name"/>

                    <TextView
                        android:id="@+id/book_name"
                        android:layout_width="0dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_margin="@dimen/layout_margin"
                    android:orientation="horizontal"
                    android:id="@+id/rating_layout"
                    android:layout_below="@+id/name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:layout_height="wrap_content"
                        android:text="@string/rating"/>

                    <TextView
                        android:id="@+id/rating"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_margin="@dimen/layout_margin"
                    android:orientation="horizontal"
                    android:layout_below="@+id/rating_layout"
                    android:id="@+id/author_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/author"/>

                    <TextView
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:id="@+id/author"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/desc"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:layout_below="@+id/author_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"/>

                <TextView
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:id="@+id/desc_text"
                    android:layout_below="@+id/desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </RelativeLayout>
    </ScrollView>
</android.support.v7.widget.CardView>